use different tuple API since Pair<> wasn't compiling onthe command line on one of my machines